{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 108,
  "lineage": "fb5b0b52-2508-bb13-ebd4-1cf7a60ca7d5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0915e09cc7ceee3ab",
            "arn": "arn:aws:ec2:us-east-1:727447523906:instance/i-00b69cecd57b0694f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b69cecd57b0694f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-052bbb49adc639f2a",
            "private_dns": "ip-10-1-1-127.ec2.internal",
            "private_ip": "10.1.1.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ece42753f54722a4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03e66e0f24e3f6ed2",
            "tags": {
              "BillingCode": "727447523906",
              "Environment": "jhon",
              "Name": "jhon-ec2-private"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e39104860e58c0f2"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-private",
            "aws_subnet.subnet2_jhon",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0915e09cc7ceee3ab",
            "arn": "arn:aws:ec2:us-east-1:727447523906:instance/i-0e85c3734240b7d96",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e85c3734240b7d96",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "JhonAWSKeyPairs",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fac76c72549d70f4",
            "private_dns": "ip-10-1-0-144.ec2.internal",
            "private_ip": "10.1.0.144",
            "public_dns": "ec2-54-243-2-237.compute-1.amazonaws.com",
            "public_ip": "54.243.2.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04114d849635045b2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f738b20eb700804d",
            "tags": {
              "BillingCode": "727447523906",
              "Environment": "jhon",
              "Name": "jhon-ec2-public"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a49111f0630134b2"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-public",
            "aws_subnet.subnet1_jhon",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_jhon",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f5e26289a2fe4bba",
            "owner_id": "727447523906",
            "tags": {
              "BillingCode": "727447523906",
              "Environment": "jhon",
              "Name": "jhon-igw"
            },
            "vpc_id": "vpc-03255713efeed0a28"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_jhon",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0172b97a102e2e951",
            "owner_id": "727447523906",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f5e26289a2fe4bba",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BillingCode": "727447523906",
              "Environment": "jhon",
              "Name": "jhon-rtb"
            },
            "vpc_id": "vpc-03255713efeed0a28"
          },
          "dependencies": [
            "aws_internet_gateway.igw_jhon",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1_jhon",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026cf089a88b26ffb",
            "route_table_id": "rtb-0172b97a102e2e951",
            "subnet_id": "subnet-0f738b20eb700804d"
          },
          "dependencies": [
            "aws_internet_gateway.igw_jhon",
            "aws_route_table.rtb_jhon",
            "aws_subnet.subnet1_jhon",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727447523906:security-group/sg-0e39104860e58c0f2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e39104860e58c0f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_private",
            "name_prefix": null,
            "owner_id": "727447523906",
            "revoke_rules_on_delete": false,
            "tags": {
              "BillingCode": "727447523906",
              "Environment": "jhon",
              "Name": "jhon-sg_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03255713efeed0a28"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727447523906:security-group/sg-0a49111f0630134b2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a49111f0630134b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_public",
            "name_prefix": null,
            "owner_id": "727447523906",
            "revoke_rules_on_delete": false,
            "tags": {
              "BillingCode": "727447523906",
              "Environment": "jhon",
              "Name": "jhon-sg_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03255713efeed0a28"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1_jhon",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727447523906:subnet/subnet-0f738b20eb700804d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0f738b20eb700804d",
            "map_public_ip_on_launch": true,
            "owner_id": "727447523906",
            "tags": {
              "BillingCode": "727447523906",
              "Environment": "jhon",
              "Name": "jhon-subnet1"
            },
            "vpc_id": "vpc-03255713efeed0a28"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2_jhon",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727447523906:subnet/subnet-03e66e0f24e3f6ed2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-03e66e0f24e3f6ed2",
            "map_public_ip_on_launch": false,
            "owner_id": "727447523906",
            "tags": {
              "BillingCode": "727447523906",
              "Environment": "jhon",
              "Name": "jhon-subnet2"
            },
            "vpc_id": "vpc-03255713efeed0a28"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727447523906:vpc/vpc-03255713efeed0a28",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0ac7102b2f8462dec",
            "default_route_table_id": "rtb-07215d7a2e24554cb",
            "default_security_group_id": "sg-042d5a460d3226cba",
            "dhcp_options_id": "dopt-de2dc8a4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03255713efeed0a28",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07215d7a2e24554cb",
            "owner_id": "727447523906",
            "tags": {
              "BillingCode": "727447523906",
              "Environment": "jhon",
              "Name": "jhon-vpc"
            }
          }
        }
      ]
    }
  ]
}